# LangTip

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: autostart.rs  config.rs  hotkeys.rs  indicator.rs  keyboard_hook.rs  main.rs  monitors.rs  single_instance.rs  sound.rs  tray.rs
