[package]
name = "langtip"
version = "0.0.3"
edition = "2021"
description = "Keyboard layout indicator for Windows"
authors = ["LangTip"]
repository = "https://github.com/alexhmt/langtip"
license = "MIT"
keywords = ["keyboard", "layout", "indicator", "windows", "tray"]
categories = ["gui"]

[dependencies]
# Windows API bindings
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Media_Audio",
    "Win32_UI_Shell",
    "Win32_Security",
    "Win32_UI_Accessibility",
    "Win32_System_SystemInformation",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_Globalization",
] }

# System tray
tray-icon = "0.19"

# Serialization for config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Global state
once_cell = "1.19"
parking_lot = "0.12"

# Logging (optional)
log = "0.4"
env_logger = "0.11"

# Directories for config path
dirs = "5.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
strip = true        # Strip symbols

[[bin]]
name = "langtip"
path = "src/main.rs"
